--- a/index-START.html
+++ b/index-START.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
+  <title>Claud's JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
   <script src="index.js"></script></head>
 <body>
@@ -59,7 +59,24 @@
 
 <script>//writing script here should be a sin
 
-</script>
+function playSound(e) {
+  const audio = document.querySelector(`audio[data-key= "${e.keyCode}"]`);
+  const key = document.querySelector(`.key[data-key= "${e.keyCode}"]`);
+  if(!audio) return; //stops the function from running all together
+  audio.currentTime = 0; //rewinds sound to beggining
+  audio.play();
+  key.classList.add('playing');
+};
+
+    function removeTransition(e){
+      if(e.propertyName !== "transform") return;
+      this.classList.remove('playing');
+    }
+    
+    const keys = document.querySelectorAll('.key');
+    keys.forEach(key => key.addEventListener('transitionEnd', removeTransition));
+    window.addEventListener('keydown', playSound)
+    </script>
 
 
 </body>
