--- a/index-START.html
+++ b/index-START.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <title>Claud's JS Drum Kit</title>
   <link rel="stylesheet" href="style.css">
-  <script src="index.js"></script></head>
 <body>
 
 
@@ -58,7 +57,7 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>//writing script here should be a sin
-
+window.addEventListener('keydown', playSound)
 function playSound(e) {
   const audio = document.querySelector(`audio[data-key= "${e.keyCode}"]`);
   const key = document.querySelector(`.key[data-key= "${e.keyCode}"]`);
@@ -74,8 +73,8 @@ function playSound(e) {
     }
     
     const keys = document.querySelectorAll('.key');
-    keys.forEach(key => key.addEventListener('transitionEnd', removeTransition));
-    window.addEventListener('keydown', playSound)
+    keys.forEach(key => key.addEventListener('transitionend', removeTransition));
+    
     </script>
 
 
